[workspace]
resolver = "2"
members = [ "zenoh-bridge-ros2dds", "zenoh-plugin-ros2dds" ]

[workspace.package]
version = "0.11.0-dev-66-ga93327c"
authors = [ "Julien Enoch <julien@enoch.fr>" ]
edition = "2021"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-ros2dds"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"

[workspace.dependencies]
async-liveliness-monitor = "0.1.1"
async-std = "=1.12.0"
async-trait = "0.1.66"
bincode = "1.3.3"
cdr = "0.2.4"
clap = "4.4.11"
cyclors = "0.2.0"
derivative = "2.2.0"
env_logger = "0.10.0"
flume = "0.11.0"
futures = "0.3.26"
git-version = "0.3.5"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.1"
rustc_version = "0.4"
serde = "1.0.154"
serde_json = "1.0.94"

[workspace.dependencies.zenoh]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
features = [ "unstable" ]

[workspace.dependencies.zenoh-collections]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"

[workspace.dependencies.zenoh-core]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"

[workspace.dependencies.zenoh-ext]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
features = [ "unstable" ]

[workspace.dependencies.zenoh-plugin-rest]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
default-features = false

[workspace.dependencies.zenoh-plugin-trait]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
default-features = false

[workspace.dependencies.zenoh-util]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
default-features = false

[profile]
[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"