#
# Copyright (c) 2024 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-test-ros2dds"
edition = "2021"

[dependencies]
cdr = "0.2.4"
futures = "0.3.26"
r2r = "0.9.5"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", default-features = false } # Default features are disabled due to some crates' requirements
# We don't assign any Zenoh version here, and it will not be limited to a specific version.
# This will force us to use the same Zenoh version as zenoh-plugin-ros2dds.
zenoh = { version = "*", features = [
  "plugins",
  "unstable",
] }
zenoh-config = { version = "*", default-features = false }
zenoh-plugin-ros2dds = { path = "../zenoh-plugin-ros2dds/", default-features = false }

# We need an empty workspace to avoid being viewed as a part of zenoh-plugin-ros2dds
[workspace]
